[tool.poetry]
name = "noisy_stocks_data_orchestrator"
version = "0.1.0"
description = ""
authors = ["Kevin Focke <19843342+KevinFocke@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
prefect = ">=2.0b"
pandera = "^0.11.0"
kaggle = "^1.5.12"
bokeh = "^2.4.3"
dask = {extras = ["complete"], version = "^2022.5.2"}
prefect-sqlalchemy = "^0.1.0"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
reverse_geocoder = "1.5.1"
freezegun = "1.2.1"
geopandas = "0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
dask = "^2022.5.2"
mypy = "^0.961"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
